--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="js/script.js" type="module"></script>
-    <script type="text/javascript" src="js/config.js"></script>
+    <!-- <script type="text/javascript" src="js/config.js"></script> -->
 </body>
 
 </html>
